--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -14,6 +14,20 @@ a {
 	text-decoration: none;
 }
 
+.button {
+  background: #616f87;
+  border-radius: 3px;
+  color: white;
+  font-size: 1.2em;
+  margin: 10px 20px;
+  padding: 20px 30px;
+}
+
+.button span{
+  font-size:.8em;
+  font-weight: 100
+}
+
 ul {
 	list-style: none;
 }
@@ -69,6 +83,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 900;
 }
 
+h3 {
+  text-transform: uppercase;
+}
+
 header {
   background: rgba(0,0,0,0.8);
   color: white;
@@ -85,6 +103,17 @@ header h1{
 
 .intro {
   /*min-height: 100%;*/
+}
+
+.download {
+  margin: 0px auto;
+  padding: 30px 0;
+}
+
+.download h2 {
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+  margin-bottom: 80px;
+  padding-bottom: 50px;
 }
 
 code {
